# PyBase32k

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pybase32k/: __init__.py  pybase32k.py
test/: test_decode.py  test_encode.py  test_encode_decode.py  test_lookup.py
tests/: test_decode.py  test_encode.py  test_encode_decode.py  test_lookup.py
